prism-github.css
/**
 * Github Light theme for Prism.js
 * Based on Github: https://github.com
 * @author Katorly
 */
/* General */
pre[class*="language-"],
code[class*="language-"] {
  color: #24292f;
  font-size: 13px;
  text-shadow: none;
  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}
pre[class*="language-"]::selection,
code[class*="language-"]::selection,
pre[class*="language-"]::mozselection,
code[class*="language-"]::mozselection {
  text-shadow: none;
  background: #9fc6e9;
}
@media print {
  pre[class*="language-"],
  code[class*="language-"] {
    text-shadow: none;
  }
}
pre[class*="language-"] {
  padding: 1em;
  margin: .5em 0;
  overflow: auto;
  background: #f6f8fa;
}
:not(pre) > code[class*="language-"] {
  padding: .1em .3em;
  border-radius: .3em;
  color: #24292f;
  background: #eff1f3;
}
/* Line highlighting */
pre[data-line] {
  position: relative;
}
pre[class*="language-"] > code[class*="language-"] {
  position: relative;
  z-index: 1;
}
.line-highlight {
  position: absolute;
  left: 0;
  right: 0;
  padding: inherit 0;
  margin-top: 1em;
  background: #fff8c5;
  box-shadow: inset 5px 0 0 #eed888;
  z-index: 0;
  pointer-events: none;
  line-height: inherit;
  white-space: pre;
}
/* Tokens */
.namespace {
  opacity: .7;
}
.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
  color: #6e7781;
}
.token.punctuation {
  color: #24292f;
}
.token.property,
.token.tag,
.token.boolean,
.token.number,
.token.constant,
.token.symbol,
.token.deleted {
  color: #0550ae;
}
.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
  color: #0a3069;
}
.token.operator,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string {
  color: #0550ae;
}
.token.atrule,
.token.attr-value,
.token.keyword {
  color: #cf222e;
}
.token.function {
  color: #8250df;
}
.token.regex,
.token.important,
.token.variable {
  color: #0a3069;
}
.token.important,
.token.bold {
  font-weight: bold;
}
.token.italic {
  font-style: italic;
}
.token.entity {
  cursor: help;
}

/* ==== DARK THEME ==== */
/**
 * Github Dark theme for Prism.js
 * Based on Github: https://github.com
 * @author Katorly
 */
/* General */
pre[class*="language-"],
body.dark-theme code[class*="language-"] {
  color: #c9d1d9;
  font-size: 13px;
  text-shadow: none;
  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}
body.dark-theme pre[class*="language-"]::selection,
body.dark-theme code[class*="language-"]::selection,
body.dark-theme pre[class*="language-"]::mozselection,
body.dark-theme code[class*="language-"]::mozselection {
  text-shadow: none;
  background: #234879;
}
body.dark-theme @media print {
  pre[class*="language-"],
  code[class*="language-"] }

body.dark-theme pre[class*="language-"] {
  padding: 1em;
  margin: .5em 0;
  overflow: auto;
  background: #161b22;
}
body.dark-theme :not(pre) > code[class*="language-"] {
  padding: .1em .3em;
  border-radius: .3em;
  color: #c9d1d9;
  background: #343942;
}
/* Line highlighting */
pre[data-line] {
  position: relative;
}
body.dark-theme pre[class*="language-"] > code[class*="language-"] {
  position: relative;
  z-index: 1;
}
body.dark-theme .line-highlight {
  position: absolute;
  left: 0;
  right: 0;
  padding: inherit 0;
  margin-top: 1em;
  background: #2f2a1e;
  box-shadow: inset 5px 0 0 #674c16;
  z-index: 0;
  pointer-events: none;
  line-height: inherit;
  white-space: pre;
}
/* Tokens */
.namespace {
  opacity: .7;
}
body.dark-theme .token.comment,
body.dark-theme .token.prolog,
body.dark-theme .token.doctype,
body.dark-theme .token.cdata {
  color: #8b949e;
}
body.dark-theme .token.punctuation {
  color: #c9d1d9;
}
body.dark-theme .token.property,
body.dark-theme .token.tag,
body.dark-theme .token.boolean,
body.dark-theme .token.number,
body.dark-theme .token.constant,
body.dark-theme .token.symbol,
body.dark-theme .token.deleted {
  color: #79c0ff;
}
body.dark-theme .token.selector,
body.dark-theme .token.attr-name,
body.dark-theme .token.string,
body.dark-theme .token.char,
body.dark-theme .token.builtin,
body.dark-theme .token.inserted {
  color: #a5d6ff;
}
body.dark-theme .token.operator,
body.dark-theme .token.entity,
body.dark-theme .token.url,
body.dark-theme .language-css .token.string,
body.dark-theme .style .token.string {
  color: #a5d6ff;
  background: #161b22;
}
body.dark-theme .token.atrule,
body.dark-theme .token.attr-value,
body.dark-theme .token.keyword {
  color: #a5d6ff;
}
body.dark-theme .token.function {
  color: #d2a8ff;
}
body.dark-theme .token.regex,
body.dark-theme .token.important,
body.dark-theme .token.variable {
  color: #a8daff;
}
body.dark-theme .token.important,
body.dark-theme .token.bold {
  font-weight: bold;
}
body.dark-theme .token.italic {
  font-style: italic;
}
body.dark-theme .token.entity {
  cursor: help;
}

